# bitter-engine

./: Cargo.toml  README.md  build.rs
shaders/: light.frag.spv  light.vert  light.vert.spv  opaque.frag  opaque.frag.spv  opaque.vert  opaque.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadow.vert  shadow.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: camera.rs  cameracontroller.rs  depth.frag  depth.frag.spv  depth.vert.spv  depthpass.rs  light.frag.spv  light.vert.spv  lighting.rs  main.rs  model.rs  pipeline.rs  renderpass.rs  shader.frag.spv  shader.vert  shader.vert.spv  texture.rs  triangle.rs
src/camera/: controller.rs  mod.rs  projection.rs
src/lights/: mod.rs
src/model/: mod.rs  render.rs
