[package]
name = "bitter-engine"
version = "0.1.0"
authors = ["jonathan.grahl <jonathan.grahl@embark-studios.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
wgpu = "0.10.2"

[build-dependencies]
naga = {version = "0.6.3", features = ["glsl-in", "spv-out"]}
anyhow = "1.0.44"
fs_extra = "1.2.0"
glob = "0.3.0"